@@ -1,3 +1,10 @@
+Wed Aug 10 22:12:28 2011  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/lib/socket.rb (Socket.tcp): add :connect_timeout option.
+	  (Addrinfo#connect_from): add :timeout option.
+	  (Addrinfo#connect): ditto.
+	  (Addrinfo#connect_to): ditto.
+
 Wed Aug 10 21:27:19 2011  Tanaka Akira  <akr@fsij.org>
 
 	* lib/net/pop.rb: fix typo in document.
